--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=/home">
     <title>Title</title>
 </head>
 <body>
-    인덱스 페이지
-    <a href="home">메인으로</a>
 </body>
 </html>
